red questionmark and text alignment fixed

--- a/experiments/01_RelCompPrior/css/style.css
+++ b/experiments/01_RelCompPrior/css/style.css
@@ -80,7 +80,6 @@ b {
 }
 
 .question {
-	display: inline-block;
 	font-weight: 600;
 	max-width: 550px;
 }
@@ -91,7 +90,12 @@ b {
 }
 
 .question-cont {
-	display: block;
+	-webkit-align-items: center;
+	align-items: center;
+	display: -webkit-flex;
+	display: flex;
+	-webkit-flex-direction: row;
+	flex-direction: row;
 	margin: 0 auto 40px auto;
 	max-width: 700px;
 }
@@ -100,13 +104,15 @@ b {
 .questionmark {
 	background: #F4044D;
 	border-radius: 50%;
-	margin-right: 15px;
 	display: inline-block;
 	color: white;
+	height: 25px;
 	font-size: 20px;
 	font-weight: 700;
 	padding: 10px;
-	height: 25px;
+	margin: 20px 15px 20px 0;
+	min-height: 25px;
+	min-width: 25px;
 	text-align: center;
 	width: 25px;
 }
@@ -115,7 +121,7 @@ b {
 .questionmark.in-text {
 	font-size: 16px;
 	height: 20px;
-	margin-left: 5px;
+	margin: 0 0 0 5px;
 	padding: 5px;
 	width: 20px;
 }
